--- a/index.html
+++ b/index.html
@@ -99,7 +99,52 @@
         （1）从Git仓库和工作区同时移除index.js文件
             git rm -f index.js
          (2)只从git仓库中移除index.css ，但保留工作区中的index.css文件
-            git rem --cashed index.css
+            git rm --cashed index.css
+
+        12
+        忽略文件
+        一般我们会有些文件无需纳入Git的管理，也不希望它们总出现先未跟踪的文件列表。在这种情况下，我们可以创建一个名为
+        .gitignore 的配置文件，列出忽略的匹配模式。
+        （1）以 # 开头的是注释
+        （2）以 / 结尾的是目录
+        （3）以 / 开头防止递归
+        （4）以 ！开头表示取反
+        （5）可以使用glob 模式进行文件和文件夹的匹配（glob指简化了的正则表达式）
+
+        13 glob模式
+        （1）星号 * 匹配零个或多个任意字符
+        （2）[abc] 匹配任何一个列在方括号中的字符
+        （3）问好 ? 只匹配一个任意字符 
+        （4）短划线 例如 [0-9]匹配-到9的数字
+        （5）两个星号 ** 表示匹配任意中间目录（例如 a/**/z 可以匹配 a/z a/b/c/z等）
+
+        14 查看提交历史
+        按时间先后顺序查看所有的提交历史，最近的提交排在最前面
+        git log
+
+        只展示最新的两条提交历史，数字乐意按需填写
+        git log -2
+
+        在一行上展示最近两条提交的历史信息
+        git log -2 --pretty=oneline
+
+        在一行上展示最近两条提交的历史信息,并自定义输出格式
+        %h 提交的简写哈希值 %an 作者名字 %ar 作者修订日期 %s 提交说明
+        git log -2 --pretty=format:"%h | %an | %ar | %s"
+
+        15 回退到指定的版本
+        在一行上展示最近两条提交的历史信息
+        git log --pretty=oneline
+
+        使用git reset --hard命令，根据指定的提交ID回到指定版本
+        git reset --hard<CommitID>
+
+        在旧版本使用git reflog --pretty=oneline命令，查看命令操作的历史
+        git reflog --pretty=oneline
+
+        再次使用git reset --hard命令，根据指定的提交ID回到指定版本
+        git reset --hard<CommitID>
+
         -->
 
 
